--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,33 +4,49 @@
     box-sizing:border-box;
     text-decoration:none;
 }
-.download-btn{
+.download-btn .icons{
     position: fixed;
     bottom: 40px;
     left: 40px;
     z-index: 99999;
   }
-  .download-btn a{
-    background: none;
-    padding: 13px 22px;
+  .download-btn .icons{
     font-size: 16px;
-    color: rgb(74, 74, 248);
+    color: white;
     border-radius: 6px;
-    border: 2px solid rgb(74, 74, 248);
     font-family: 'Poppins', sans-serif;
     transition: all 0.3s ease;
   }
-  .download-btn a:hover{
-      color: #ffffff;
-      background: rgb(74, 74, 248);
+
+  .icons ul{
+    text-decoration: none;
+    list-style: none;
+    user-select: none;
   }
+  .icons ul li{
+      display: inline-block;
+      font-size: 30px;
+      margin: 0 12px;
+  }
+  .icons ul li .fa{
+      padding: 10px;
+      color: #fff;
+      background: rgb(74, 74, 248);
+      border-radius: 20px;
+      transition: .3s;
+  }
+  .icons ul li .fa:hover{
+      transform: scale(1.2) rotate(360deg);
+      color: rgb(74, 74, 248);
+      background: #fff;
+  }
+  
   @media screen and (max-width: 600px){
-      .download-btn{
-          left: 20px;
-      }
-      .download-btn a{
-          font-size: 13px;
-          padding: 9px 15px;
+     
+      .download-btn .icons ul li{
+          font-size: 28px;
+          padding: 0;
+          left: 0 auto;
       }
   }
 
@@ -174,7 +190,7 @@ section .title::after{
     filter:brightness(90%);
 }
 
-.profile{
+/* .profile{
     position: relative;
     width: 500px;
     height: 500px;
@@ -183,7 +199,7 @@ section .title::after{
     border-radius: 25px;
     box-shadow: inset 0 0 1em white, 0 0 2em rgb(74, 74, 248);
     
-}
+} */
 .home{
     display:flex;
     background-color: #111;
@@ -374,6 +390,22 @@ section .title::after{
     top:0;
     background:rgb(74, 74, 248);
 }
+.skills-content .right .ill::before{
+    width:70%;
+}
+.skills-content .right .xd::before{
+    width:60%;
+}
+.skills-content .right .word::before{
+    width:90%;
+}
+.skills-content .right .excel::before{
+    width:60%;
+}
+.skills-content .right .powerpoint::before{
+    width:80%;
+}
+
 .skills-content .right .html::before{
     width:90%;
 }
@@ -386,9 +418,10 @@ section .title::after{
 .skills-content .right .php::before{
     width:50%;
 }
-.skills-content .right .mysql::before{
+.skills-content .right .ps::before{
     width:50%;
 }
+
 .teams .title::after{
     content:"";
 }
@@ -669,3 +702,4 @@ footer span a:hover{
     line-height:38px;
 }
 }
+
